--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation "androidx.fragment:fragment-ktx:1.3.5"
     implementation "io.insert-koin:koin-android:3.1.1"
