--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.edu.alterjuicechat">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AlterJuiceChat"
-        android:usesCleartextTraffic="true"
-        android:name=".App">
+        android:usesCleartextTraffic="true">
+
+<!--        <service
+            android:name=".TCPService"
+            android:enabled="true"
+            android:exported="false"/>-->
+
+        <receiver
+            android:name=".TCPBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.edu.alterjuicechat.NOTIFICATION_CLICKED" />
+            </intent-filter>
+        </receiver>
+
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
