--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.edu.alterjuicechat"
-        minSdkVersion 26
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -52,4 +52,5 @@ dependencies {
 
     implementation "androidx.fragment:fragment-ktx:1.3.5"
     implementation "io.insert-koin:koin-android:3.1.1"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 }
