--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.5"
     implementation "io.insert-koin:koin-android:3.1.1"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
 }
