--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     buildFeatures {
-        viewBinding=true
+        viewBinding = true
     }
 
     defaultConfig {
@@ -37,23 +37,22 @@ android {
 }
 
 dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation project(path: ':domain')
+    implementation project(path: ':data')
+    implementation project(path: ':socket')
+    implementation library_kotlin_stdlib
+    implementation library_ktx_core
+    implementation library_app_compat
+    implementation library_android_material
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation library_espresso_core
+    implementation library_gson
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-
     implementation "androidx.fragment:fragment-ktx:1.3.5"
-    implementation "io.insert-koin:koin-android:3.1.1"
-    // implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation library_koin
+    implementation library_coroutines_core
+    implementation library_coroutines_android
 }
