--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.5.0"
+    ext.gson_version = "2.9.0"
+    ext.coroutines_version = "1.5.0"
+    ext.koin_version = "3.1.1"
+    ext.core_ktx_version = "1.6.0"
+    ext.android_material_version = "1.4.0"
+    ext.app_compat_version = "1.3.0"
+    ext.espresso_core_version = "3.4.0"
+
+    ext.library_kotlin_stdlib = "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    ext.library_gson = "com.squareup.retrofit2:converter-gson:$gson_version"
+    ext.library_coroutines_core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    ext.library_coroutines_android =  "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    ext.library_koin = "io.insert-koin:koin-android:$koin_version"
+    ext.library_ktx_core = "androidx.core:core-ktx:$core_ktx_version"
+    ext.library_android_material = "com.google.android.material:material:$android_material_version"
+    ext.library_app_compat = "androidx.appcompat:appcompat:$app_compat_version"
+    ext.library_espresso_core = "androidx.test.espresso:espresso-core:$espresso_core_version"
+
+
+
     repositories {
         google()
         mavenCentral()
@@ -18,7 +38,6 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 
