--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
     ext.library_coroutines_core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     ext.library_coroutines_android =  "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     ext.library_koin = "io.insert-koin:koin-android:$koin_version"
+    ext.library_koin_core = "io.insert-koin:koin-core:$koin_version"
     ext.library_ktx_core = "androidx.core:core-ktx:$core_ktx_version"
     ext.library_android_material = "com.google.android.material:material:$android_material_version"
     ext.library_app_compat = "androidx.appcompat:appcompat:$app_compat_version"
