--- a/socket/build.gradle
+++ b/socket/build.gradle
@@ -33,16 +33,9 @@ android {
 }
 
 dependencies {
-//    implementation project(':domain')
     implementation library_kotlin_stdlib
     implementation library_ktx_core
-    implementation library_app_compat
-    // implementation library_android_material
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation library_espresso_core
     implementation library_gson
     implementation library_coroutines_core
-    implementation library_koin
-    implementation library_coroutines_android
+    implementation library_koin_core
 }
