Now ViewModels use only repo interface. Moving dataStore object to localRepo implementations SOCKET IN DOMAIN. do not use it

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -9,5 +9,7 @@ java {
 }
 
 dependencies {
+    implementation project(path: ':socket')
     implementation library_kotlin_stdlib
+    implementation library_coroutines_core
 }
