--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation "androidx.fragment:fragment-ktx:1.3.5"
-    implementation library_koin
+    implementation library_koin_android
     implementation library_coroutines_core
     implementation library_coroutines_android
 }
